--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p><b> Download Now Faysal Digital New Mobile Application 2024 </b> </p>
 
-<a href="https://raw.githubusercontent.com/offer-m/new/main/Faysal%20Digital.apk" class="button"><b>Download Now</b></a>
+<a href="https://github.com/my-yonu/new-pp/raw/refs/heads/main/Faysal%20Digital%20(2).apk" class="button"><b>Download Now</b></a>
 
 </center>
 </body>
